apps/first-things-first/gitops-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops-operator
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
