apps/first-things-first/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"

        
        
       
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-adp
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
    
    
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-logging
  labels:
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"    
        
       
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-dev
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
        
       
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-prod
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
        
       
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-staging
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
        
        
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-admin
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
        
       
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-storage
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
    
    
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-vertical-pod-autoscaler
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"   
    
    
---
apiVersion: v1
kind: Namespace
metadata:
  name: olatunde-testing
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"       
   

---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cluster-observability-operator
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"    
    
    

---
apiVersion: v1
kind: Namespace
metadata:
  name: aistor
  labels: 
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-15"
