apps/first-things-first/adminnetpol-logging.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-logging-collector-delegation
spec:
  priority: 40
  subject:
    pods:
      namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: openshift-logging
      podSelector:
        matchLabels:
          app.kubernetes.io/managed-by: cluster-logging-operator
          app.kubernetes.io/part-of: cluster-logging
  ingress:
    - name: "delegate-to-collector-ingress"
      action: "Pass"
      from:
        - pods:
            namespaceSelector: {}
            podSelector: {}
  egress:
    - name: "delegate-to-collector-egress"
      action: "Pass"
      to:
        - pods:
            namespaceSelector: {}
            podSelector: {}
        - networks:
            - "0.0.0.0/0"
            - "::/0"
